--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header2-f" style="background-image: url(assets/images/helpersbamse-2000x1767.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header2-f" style="background-image: url(assets/images/helpersbamse-2000x1767.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -209,7 +209,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="QRmTPy+s3toR04nT1jnViR/XroXuR4gEvp36YTVm4bG88k/lHycmRjTsQPPly9+joD+Xm28K7qN0p/vkJo6yIGTtHLU+fwyvTmgNTHsr+Zcje4ZZY66EUtgEgcELUeYU" data-form-email="true">
+                    <input type="hidden" value="SBh0C+YCUFmhRSBDIoaqc0sNFvjlnrw84gHQlDZHLwnHz9Y7DF2jTaMYsZE5tvOHNlUXihIszdclG94esDQgn5BE+FFXGu7sFUjW+pcRanAfvPcR5mFM5Dpole0jCxuW" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
