--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -257,7 +257,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="F7OYQGQurdzrqpWdREwj51KXl3A5wHDZxU3zSkqtAqDEsC497Vd3k9GXkMQaRIBT/9VEjWIV6zddlNMGxIb43GLEMr4yHThWArRyDsw51XLaAm9ftw6pW6dlKb+Z0+ZD" data-form-email="true">
+                    <input type="hidden" value="134RmrCvhmnyE1vXp5rjJgLy+xjsBU6tJwYhUIsiYliuzciGIy780yJnkww9S51V8ffiHypFcsd2LmSCcxQHfFbORhojVlXbgfJ9oQ/PeE9nUV/zA8otS4TCMWruDxVb" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
