--- a/salam_ladc.html
+++ b/salam_ladc.html
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-t" style="background-image: url(assets/images/salam-ladc-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-t" style="background-image: url(assets/images/salam-ladc-2000x1333.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -146,7 +146,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="5iBMcBLTO3SNKvfRN9e2+edd/uiPa+1IpDpQj+5mPITe1NjcWBAlxwZSUs+OZZP8IhoAhVMsWXPrhZfiwasScl7lrofE2plgFXcxwnf0ymf7MxviKo0oRZxXJdgSrnkM" data-form-email="true">
+                    <input type="hidden" value="EXaaoQlQaon9enFHMvCm67w/2oQYW/05NDIv4C0DHCEpdr4ASMLPXgw1bDJWWBwrUHGBQthTF+Xpugp/g1SfZ6e9OQgoEy+/lFt78PDqwLc86a+iF6VYNXRNBGKTXAko" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
