create github pages

--- a/bidrag.html
+++ b/bidrag.html
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box4-14" style="background-color: rgb(249, 115, 82);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box4-14" style="background-color: rgb(249, 115, 82);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -109,7 +109,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ImM9rUrbdoqsLGU0lBjausRB0wLm+XshxJ+5buc0EyuuQ+Wo3ADU0ULsvJEcnTob050Vo1/7SjZNde3SeNazFcn37rEWM8saHUquaZMx9QaxbGFUEIZ85vCYp+qL8gwW" data-form-email="true">
+                    <input type="hidden" value="q739FAAldDJZBTQfEgYRgZdA/EReLEth3geEEwGfDAg7ySl3cH89DtUbIjwn8HV9RCQhqJYSUEUsiTzXGDQvQMD7NbtOtjrdX9J5DoXjodqBcTUQnrY215UgqdlTH+WD" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
