--- a/prosjekter.html
+++ b/prosjekter.html
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -84,7 +84,7 @@
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="FORESLÅ PROSJEKT">
-                            <input type="hidden" value="n6lRjrYtezW4Hf6HFXRoSa2ysPVDTv8C9xirAOZRTGIj21ceORy26V63ergm0gLEvi8eTPtqY6uYpKnMTzevBJKu5T7yVm5bgvXNY1snoxJzhgTglTX/2nXioiWfaWhu" data-form-email="true">
+                            <input type="hidden" value="wN3AlHMrZ2UBuCNEEZcXWNf/aw9KIj2fXMFFMrU2ZgIsaUkmZyhIVtqhqg/nJg7/sENdfKxJuNO2zT6Yj1gcWxTxhTCMyqfRobQXNb6Ubh/ulaoIXIhpvoxdZ5IfNWGM" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
@@ -127,7 +127,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="G8fzqwbkMNGvweCgzQKVE6NjrMspCM03we4+LaLHDxM7GuXoeEbTLt9AUYaymaLjwvPthfKyE8I9a5bWbtpbGIZpkuReYqE94koidE3YfaMZa3LIO2QdUIxP4h/uVOB+" data-form-email="true">
+                    <input type="hidden" value="GkwiFTRUP6AKZc7xjYcJjcmBudYLczjDN9rZuImeVNjh4r1LCKkIkx8OY+H/7JAB4I2FxiZrA3TEmF/ZZAHzIfLDdDC7u4A76r0jpun7IJ2hBy6MO3sK4TSch3Nt6OOj" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
