create github pages

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header2-f" style="background-image: url(assets/images/helpersbamse-2000x1767.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header2-f" style="background-image: url(assets/images/helpersbamse-2000x1767.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -209,7 +209,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="RS6SvIbd1CX3DTIWXpOQa2ok5uSOksGu+t+OXSvpHyZhM3rPnM9K+kgiNhj40rRCxsTTEPTnLgr+6EhVFci8NHAlz3kHGt22XCtVuPL+OOYDqbfycdL2VcUupWAq2wJ1" data-form-email="true">
+                    <input type="hidden" value="5t1FCRWvVh1ctZ6qhh5sm4VJ0WLIXJEEISELQQVgvnrJ2IaM1K35Ab4Q9acSvLEsxyVAAV2g/KyzDEpPgyO/NKfkwm5LkCv865Gav2M4UvhniU3UkCERbEsWbWrAWa4d" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
