--- a/salam_ladc.html
+++ b/salam_ladc.html
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-t" style="background-image: url(assets/images/salam-ladc-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-t" style="background-image: url(assets/images/salam-ladc-2000x1333.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -146,7 +146,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="uK7d6sG5+s5XDbIes7Ji5WSnKDBgft3+ZJsdPG93FFkOiHUv0bbGnNffEZTCrwDI+imLi3+RhjlH1uvpLGuqHlCmKQzTbeqBM7TDUoDQy7cCioBFFBtKC8DVQHTz2Co/" data-form-email="true">
+                    <input type="hidden" value="ZKdKBUKnAUtA/JOFxPumKda0XVHcj5IdsrxIrV83xSyWnp1griSCsuRNZfu1A5+jJS+4na/bW4lwVtN77J7zN84y+Y8Kc/P/CA6xc20N1CzAHQob8pUw1PpcF/KzfaKa" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
