--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -257,7 +257,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="FI2IHRtqCo6+yG6ee+mc7KaDqeJmuAC0ceVnuddgsIh6PdX1eQOjPK7QEvNxLRj3ZNqXyK8OS2UrL+PSwFjBTMkIkZdsYcOtxVO6MDzx7qHAw1CE80OLmsB3OTYsVv7S" data-form-email="true">
+                    <input type="hidden" value="jY9k13qLqcu/mlf4XhMSL99jys2syj3pCKXzCbtML/r82pRO2Aedpebl978fzs5Fwu5VQSE+DIzSJm8OvrzFTsng0xaeL9DqJgPO+wODbJkBjrsZRP7NjJYyVEuJD7Bg" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
