--- a/salamkitchen.html
+++ b/salamkitchen.html
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="msg-box3-15" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="msg-box3-15" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -190,7 +190,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="TkwkjNzMeEp12F12RljyZZ7eB0d7iaX0gjlcVcf8YSlU5GbfS997//xmzHV83dSMaZtMfIcL0kzLIQ9Z02f/udY+//tsy8f/ywvmkIJlTc6TGnWExxAw/RhtN9vp2QBT" data-form-email="true">
+                    <input type="hidden" value="YB5sRYBlTGeEP6v3QkqIDfBKKcODyyJFU2CvnZGfkzL31DxDe66pFNZMc3IoxKhZsNGa4LPOW3UR1FIPLUoHEkyLIoZAIG77ww+GlrWIUSmysl2EINjph2ksZ314okVP" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
