--- a/about.html
+++ b/about.html
@@ -19,6 +19,24 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97449514-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+    <!-- Map Script -->
+    <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
+<!-- /Google Analytics -->
+
+
 <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="ext_menu-i">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
@@ -43,7 +61,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header2-f" style="background-image: url(assets/images/helpersbamse-2000x1767.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header2-f" style="background-image: url(assets/images/helpersbamse-2000x1767.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -209,7 +227,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="5t1FCRWvVh1ctZ6qhh5sm4VJ0WLIXJEEISELQQVgvnrJ2IaM1K35Ab4Q9acSvLEsxyVAAV2g/KyzDEpPgyO/NKfkwm5LkCv865Gav2M4UvhniU3UkCERbEsWbWrAWa4d" data-form-email="true">
+                    <input type="hidden" value="FFv+ChRGeQacoqZLO4/WcO2AFQDTI7Ma5/WAiMBcPexV4yol5gYw33Vb6GtdgI2n+JM1ud97Y1QiaeJZVUwbsM6WdRHllwLTInD+hAZ/3Ts+WF1knAuVgw9KiF3pXSZX" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
