--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97449514-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+    <!-- Map Script -->
+    <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
+<!-- /Google Analytics -->
+
+
 <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="ext_menu-i">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
@@ -44,8 +62,8 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);"></div>
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
@@ -257,7 +275,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="jY9k13qLqcu/mlf4XhMSL99jys2syj3pCKXzCbtML/r82pRO2Aedpebl978fzs5Fwu5VQSE+DIzSJm8OvrzFTsng0xaeL9DqJgPO+wODbJkBjrsZRP7NjJYyVEuJD7Bg" data-form-email="true">
+                    <input type="hidden" value="Q0x2OpjBlaGu5WC7Km7tGBis8Ns86L7HoEg3BADVHdTzKWOTolm/pVS/uUJOKX8uBPi7ZMmk0wo2LbSNjmmV1mUc0r7A4lpoT1YoeKesOGTNDfIW/U7mUKR1I9+PGQzV" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
