--- a/prosjekter.html
+++ b/prosjekter.html
@@ -18,6 +18,24 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97449514-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+    <!-- Map Script -->
+    <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
+<!-- /Google Analytics -->
+
+
 <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="ext_menu-m">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
@@ -42,7 +60,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Creator</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -84,7 +102,7 @@
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="FORESLÅ PROSJEKT">
-                            <input type="hidden" value="JFFOo6Q0Tvf7SWIXqQe4Ydtk96qCN0ip/yVv7obeiH172quIUT2vxu99chIRBE/DeTjbaAFTjAQeQ6ijRJjnUNe3j11N2Ss5U0d1hZf/bU/Cq93ntu7iVjI9cBg+qqsA" data-form-email="true">
+                            <input type="hidden" value="dk8aeJJeCRQOS35Dz2dXwwpohDPb2gSa5tZtNgD7TA5XlHxdlIZOdhrPq9lIwDJYNckt89tG0Co5d3UGYnQYAcWtU1FFhJgS1WyPgUUB2CFTkbCK72m/HoIO8v0lh7OK" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
@@ -127,7 +145,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="NL5gXvOSjKxXkqI9Bpd2TqGIr5T/vpsLEMlxvQmR0M2DCEA6hmvGqj92lt+MmFGEkXA67T+R9oJFwGXrqVG26KVgyXklAMARp6PR020k/QE23+aZVqLtIBpyaxaaolnx" data-form-email="true">
+                    <input type="hidden" value="JGOGf0YeM4VS0MEJ+86lwRUU++83Yhhwvxg/DnHkVqNyYFNsjCglBb5ZsR9nDXdUk9YeaCV8yDffK2fi8W+n0u/89QgzulivdOp+oFkP8t4g8pnbo8DJILQjvbZ/LH9x" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
