--- a/salam_ladc.html
+++ b/salam_ladc.html
@@ -19,6 +19,24 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97449514-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+    <!-- Map Script -->
+    <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
+<!-- /Google Analytics -->
+
+
 <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="ext_menu-s">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
@@ -146,7 +164,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ZKdKBUKnAUtA/JOFxPumKda0XVHcj5IdsrxIrV83xSyWnp1griSCsuRNZfu1A5+jJS+4na/bW4lwVtN77J7zN84y+Y8Kc/P/CA6xc20N1CzAHQob8pUw1PpcF/KzfaKa" data-form-email="true">
+                    <input type="hidden" value="ESxBBJNQMltGYV31XuBAmit+cHiy0I8n+kz464xhKTgz+KG8Tjmj5GGII5LWISIaV/q+qdG+sT9Htn5sYvzIjZI2g24pp+PE5EEaYees2fvB3oKCAI+LI38RwP88r/2Y" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
