--- a/salamkitchen.html
+++ b/salamkitchen.html
@@ -19,6 +19,24 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97449514-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+    <!-- Map Script -->
+    <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
+<!-- /Google Analytics -->
+
+
 <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="ext_menu-q">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
@@ -43,7 +61,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="msg-box3-15" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="msg-box3-15" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -190,7 +208,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="YB5sRYBlTGeEP6v3QkqIDfBKKcODyyJFU2CvnZGfkzL31DxDe66pFNZMc3IoxKhZsNGa4LPOW3UR1FIPLUoHEkyLIoZAIG77ww+GlrWIUSmysl2EINjph2ksZ314okVP" data-form-email="true">
+                    <input type="hidden" value="v/U1Vc5E4qxKZPXus9f41laHRxlxW6L65Fh2a2g/S8nzeerP0GGg9GAVo4kpd8E/k8y/yh8YwriL2Q/gd4CA+AxneFl5soOiv2CGqHx54GGAxTy9jHUm5o9Y1OgW4jhR" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
