--- a/prosjekter.html
+++ b/prosjekter.html
@@ -20,6 +20,15 @@
 <body>
 
 <!-- Google Analytics -->
+    <meta property="og:type"          content="website" />
+    <meta property="og:image" content="http://helpers.no/img/helpersbamse.jpg" />
+    <meta property="og:title" content="Helpers - Helping the helpers" />
+    <meta property="og:url" content="http://helpers.no"/>
+    <meta property="og:description" content="Tenkt på hvordan du kan hjelpe flyktningene fra Syria? De frivillige er ute i teltleirene, deler ut mat, underviser barn, gir mødrene helseråd.
+For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet, er det nødvendig at de får hvile og mat selv. Det skal vi fikse" />
+
+
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -60,7 +69,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -102,7 +111,7 @@
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="FORESLÅ PROSJEKT">
-                            <input type="hidden" value="dk8aeJJeCRQOS35Dz2dXwwpohDPb2gSa5tZtNgD7TA5XlHxdlIZOdhrPq9lIwDJYNckt89tG0Co5d3UGYnQYAcWtU1FFhJgS1WyPgUUB2CFTkbCK72m/HoIO8v0lh7OK" data-form-email="true">
+                            <input type="hidden" value="YWyJvBmBF+uS7EZTASE6DbxhItXIx/rgl+C5ySUexhlr4ZNqxfh004OTJLBUJfUduOfBJ23DDDN6u00b04h+aLIXPjqL1QpDiaZIjiRr5RKghyuHIkbAJhyGEYEbwbw1" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
@@ -145,7 +154,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="JGOGf0YeM4VS0MEJ+86lwRUU++83Yhhwvxg/DnHkVqNyYFNsjCglBb5ZsR9nDXdUk9YeaCV8yDffK2fi8W+n0u/89QgzulivdOp+oFkP8t4g8pnbo8DJILQjvbZ/LH9x" data-form-email="true">
+                    <input type="hidden" value="DQhyCFoGwSLJ0D48w7CJvsYm1/zjpwdaQ0BgCaj5waQrTkpnGlpzZgT3IBWwqRSlsT6fCMobITsT0YWIVk/qO7uGNN3ZSLWlxPZD/7s66x2qxgcbPUQRICsOo7Z/VAcE" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
