--- a/salam_ladc.html
+++ b/salam_ladc.html
@@ -21,6 +21,15 @@
 <body>
 
 <!-- Google Analytics -->
+    <meta property="og:type"          content="website" />
+    <meta property="og:image" content="http://helpers.no/img/helpersbamse.jpg" />
+    <meta property="og:title" content="Helpers - Helping the helpers" />
+    <meta property="og:url" content="http://helpers.no"/>
+    <meta property="og:description" content="Tenkt på hvordan du kan hjelpe flyktningene fra Syria? De frivillige er ute i teltleirene, deler ut mat, underviser barn, gir mødrene helseråd.
+For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet, er det nødvendig at de får hvile og mat selv. Det skal vi fikse" />
+
+
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,7 +70,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-t" style="background-image: url(assets/images/salam-ladc-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-t" style="background-image: url(assets/images/salam-ladc-2000x1333.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -164,7 +173,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ESxBBJNQMltGYV31XuBAmit+cHiy0I8n+kz464xhKTgz+KG8Tjmj5GGII5LWISIaV/q+qdG+sT9Htn5sYvzIjZI2g24pp+PE5EEaYees2fvB3oKCAI+LI38RwP88r/2Y" data-form-email="true">
+                    <input type="hidden" value="jr3Mq2+cCnbvFmdLyxsNWOdbOPeTCJQ+FVTuOwyreqe+HgkLErY5xau91IcXz0BpUlrkt1UURiABWecLYlfbWh87W2dRtYv+uKmhdLmvprN2FgHRT4gN75BpR9MRPMsD" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
