--- a/bidrag.html
+++ b/bidrag.html
@@ -162,7 +162,14 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>//INSERTSCRIPT//<br></p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2">
+
+                      <!-- Place this tag where you want the Awesome Table Widget to render -->
+                      <div data-type="AwesomeTableView" data-viewID="-Khw_9E5qXtO-3lDqPw_"></div>
+
+
+
+            </div>
         </div>
     </div>
     
