--- a/salam_ladc.html
+++ b/salam_ladc.html
@@ -52,8 +52,8 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
             <div class="mbr-navbar__container">
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
-                        <span class="mbr-brand__logo"><a href="index.html"><img src="assets/images/helpers-logo-128x128.png" class="mbr-navbar__brand-img mbr-brand__img" alt="Mobirise"></a></span>
                         
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="https://mobirise.com">Helpers.no</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
@@ -173,7 +173,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="jr3Mq2+cCnbvFmdLyxsNWOdbOPeTCJQ+FVTuOwyreqe+HgkLErY5xau91IcXz0BpUlrkt1UURiABWecLYlfbWh87W2dRtYv+uKmhdLmvprN2FgHRT4gN75BpR9MRPMsD" data-form-email="true">
+                    <input type="hidden" value="MbNnJNSZPnfJs0eo9lQbo+8xlMRwMb4BYtINqfm3zWqYfLjxyoisYva1H4BI8q+aUrMtIww/IjVKAS/O+fp8aoNgxidGiaDPUH21W2i0uL9PoQYe9ge1wIEk2LgGaljg" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
