--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         
-                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="https://mobirise.com">Helpers.no</a></span>
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="https://helpers.no">Helpers.no</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
@@ -72,7 +72,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -309,7 +309,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="EBt/1qWxJNW/sd7SRoBgx1X6wq+p6eT/0t4Kdn/Hg50YojeWB4O1irIkWqofxUpW8oLSHNpymjntG7bisZG22xcehBW1bWFdHS56U51UWhhNkDLqHokZoafjrhWcruse" data-form-email="true">
+                    <input type="hidden" value="nf1Bzivns/ocoEeZsSfwvOnbGccP344NmfT9vNx/DW/wnUUb4L2OFZkGKZfd9jNFDNVzAficRMNAxdh0PU0su96eGhu9YtiVZdFBZfaTgkDDwfCBW87/Ad25dyRh5T29" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
