create github pages

--- a/prosjekter.html
+++ b/prosjekter.html
@@ -69,7 +69,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -111,7 +111,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="FORESLÅ PROSJEKT">
-                            <input type="hidden" value="Q9br6gKNUNR5GL7vyFk1FfB0rCyEEUFlqdno8NYOFLJI3zyxTTV+4QwABgI01qc+IbCNZ/vRuUlcPMZ7kFEA8TLmuMaPWU/jwg2K/j5g4eFVB1d2QILfMsRD9S77Vr5t" data-form-email="true">
+                            <input type="hidden" value="wc3JrobcVaWY5dRDQW4AP2LrJBKBvKcg6svdleVGMqHVfCGQBOOueEj5DnPVYwVkJPMz6S2ej86wwULyYx82XVI0ejE8mRSLix/y2ApWHkOXbhoZsb6xVtrLJai6bFon" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
@@ -154,7 +154,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="14AWN77X8kcrH4CZ2ZLjW4Z8DieCanwFENH3DdE+H0U6jCtXHsBRgxCnVDwSUX6y9piiN3V6Pz53Ckuva3loSKZ3XrID4rSxHY4n9T28m3tLNt+REixIP0dtyR5gROW/" data-form-email="true">
+                    <input type="hidden" value="e3Sm+FbLxrOGWFHw8a+RKfpfbG++fiX4JC3UTF7f0cs/o9STmXFWqrOBWhsPK8KYNkdC2m4/vp7HWCN5X8yKvpPuSygmomUwV93dXKg9uV1UJHkmugxCYwJ/+BjeKTfA" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
