--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -309,7 +309,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="uHqQjwkwOx54h1KLpl9xwcIG2RQi/mI5Gv6bn2Olax+IIMyJAni3oR/TRxGaJqnTFhJ9cySkY0YwlJvwLUXl9VkYDWOYfA2YLa6+0kns/2DMDIpdkcFTt3RnrkV72qio" data-form-email="true">
+                    <input type="hidden" value="lcxS0i9zV+uEj9qC6OeTCubp7NX6YCQMZrBB0/f0Fqq1esPbtbG3VMVI54hQQLe/z2Fk9UMi0nyWj6nXlP3Yh87OyjxgknFtFaCtFi1hiXY+27tYp9VR1Cddezg4dMzo" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
